--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +23,13 @@
         </button>
 
         <div class="me-0" style="width: 10%">
-          <input class="form-control me-2" type="button" value="Mode" />
+          <input
+            onclick="mode();"
+            id="bouton-dark"
+            class="form-control me-2"
+            type="button"
+            value="Mode"
+          />
         </div>
       </div>
     </nav>
